probably messed up the app

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<header class="flex items-center gap-4 p-4 md:px-8">
+<header :if={false} class="flex items-center gap-4 p-4 md:px-8">
   <div>
     <a href="/" class="font-poppins text-2xl font-black italic">GiTS</a>
   </div>
@@ -84,6 +84,11 @@
       <div class="pb-6">
         <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
           Organizers
+        </a>
+      </div>
+      <div class="pb-6">
+        <a href="/faq" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
+          FAQ
         </a>
       </div>
     </nav>
