--- a/lib/gits_web/controllers/account_html/new.html.heex
+++ b/lib/gits_web/controllers/account_html/new.html.heex
@@ -1,4 +1,27 @@
-<div class="min-h-screen space-y-8 bg-white p-4 pt-32 pb-4 lg:px-12">
+<div :if={true} class="flex h-screen items-center">
+  <div class="flex grow flex-col justify-center gap-6">
+    <div>
+      <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
+    </div>
+
+    <h2 class="text-xl font-medium tracking-tight text-gray-900">
+      Join the waitlist
+    </h2>
+    <!-- <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14"> -->
+    <!--   <.link -->
+    <!--     href={~p"/sign-in?return_to=/tickets"} -->
+    <!--     class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl" -->
+    <!--   > -->
+    <!--     Sign in -->
+    <!--   </.link> -->
+    <!-- </div> -->
+    <p class="text-sm text-zinc-700">
+      Otherwise, contact us on <a href="mailto:support@gits.co.za">support@gits.co.za</a>
+    </p>
+  </div>
+</div>
+
+<div :if={false} class="min-h-screen space-y-8 bg-white pt-32">
   <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
   <h1 class="font-poppins text-3xl font-semibold text-gray-900">
     Create your first event with us
