--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,5 +1,5 @@
 <div class="flex min-h-screen items-center">
-  <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
+  <div class="flex grow flex-col justify-center gap-6">
     <h1 class="text-3xl font-black italic tracking-tight">GiTS</h1>
     <h2 class="text-xl font-medium tracking-tight text-gray-900">
       Easy events, affordable tickets.
