--- a/lib/gits_web/controllers/page_html/organizers.html.heex
+++ b/lib/gits_web/controllers/page_html/organizers.html.heex
@@ -1,43 +1,35 @@
 <div class="flex h-screen items-center">
-  <div class="flex grow flex-col justify-center gap-6 px-6 lg:px-8">
+  <div class="flex grow flex-col justify-center gap-6">
     <div>
       <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
     </div>
 
-    <h2 class="text-xl font-medium tracking-tight text-gray-900">
-      Host your event with us.
-    </h2>
-
-    <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-      <.link
-        href={~p"/accounts/new"}
-        class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl"
-      >
-        Get started
-      </.link>
-    </div>
+    <%= if not is_nil(@member) and @member.waitlisted do %>
+      <h2 class="text-xl font-medium tracking-tight text-gray-900">
+        Congratulations, you're on the waiting list.
+      </h2>
+      <p class="text-sm text-zinc-700">
+        While we do our final touch-ups, we'll keep your seat warm for you.<br />Remember to verify your email address. Just to make sure we have a way to reach you<br /><br />
+        Wanna skip the line? Reach out to
+        <.link class="font-semibold" href="https://twitter.com/sduduzo_g">Sdu on twitter</.link>
+      </p>
+    <% else %>
+      <h2 class="text-xl font-medium tracking-tight text-gray-900">
+        Host your event with us.
+      </h2>
+      <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
+        <.link
+          href={~p"/join-waitlist"}
+          class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl"
+        >
+          Join the waiting list
+        </.link>
+      </div>
+      <p class="text-sm text-zinc-700">
+        While we do our final touch-ups, we'll keep your seat warm for you.<br /><br />
+        Wanna skip the line? Reach out to
+        <.link class="font-semibold" href="https://twitter.com/sduduzo_g">Sdu on twitter</.link>
+      </p>
+    <% end %>
   </div>
 </div>
-<footer class="bg-white">
-  <div class="mx-auto max-w-7xl space-y-10 overflow-hidden px-6 py-20 sm:py-24 lg:px-8">
-    <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
-      <div :if={false} class="pb-6">
-        <a href="#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">About</a>
-      </div>
-      <div class="pb-6">
-        <a href="/tickets" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
-          Tickets
-        </a>
-      </div>
-
-      <div class="pb-6">
-        <a href="/organizers" class="text-sm leading-6 text-gray-600 hover:text-gray-900">
-          Organizers
-        </a>
-      </div>
-    </nav>
-    <p class="text-center text-xs leading-5 text-gray-500">
-      &copy; 2024
-    </p>
-  </div>
-</footer>
