--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -4,15 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title prefix="GiTS - ">
-      <%= assigns[:page_title] || "Home" %>
-    </.live_title>
+    <SEO.juice
+      conn={@conn}
+      config={GitsWeb.SEO.config()}
+      page_title={assigns[:page_title] || "Home"}
+    />
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
     <Turnstile.script />
   </head>
-  <body class="antialiased font-poppins bg-white">
+  <body class="font-poppins bg-white antialiased">
     <%= @inner_content %>
   </body>
 </html>
