--- a/lib/gits_web/controllers/page_html/search.html.heex
+++ b/lib/gits_web/controllers/page_html/search.html.heex
@@ -1,70 +1,3 @@
-<div class="max-w-screen-2xl mx-auto md:p-4 space-y-4 md:space-y-8">
-  <div class="bg-white flex items-center justify-between p-4 max-w-md md:rounded-2xl">
-    <button phx-click={JS.navigate(~p"/")} class="p-2 rounded-xl">
-      <.icon name="hero-arrow-left" />
-    </button>
-    <h1 class="font-bold text-lg">Search</h1>
-    <button class="p-2 rounded-xl opacity-0" disabled>
-      <.icon name="hero-ellipsis-vertical" />
-    </button>
-  </div>
-  <!-- <div class="grid grid-cols-2 px-4 gap-4 md:p-0 max-w-md"> -->
-  <!--   <span class="text-sm font-medium p-4 py-3 rounded-xl text-center bg-blue-600 text-white"> -->
-  <!--     Upcoming -->
-  <!--   </span> -->
-  <!---->
-  <!--   <span class="bg-white text-gray-500 text-sm p-4 py-3 rounded-xl text-center"> -->
-  <!--     Past tickets -->
-  <!--   </span> -->
-  <!-- </div> -->
-  <div class="px-4 md:p-0">
-    <form class="max-w-3xl">
-      <label
-        for="default-search"
-        class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
-      >
-        Search
-      </label>
-      <div class="relative">
-        <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
-          <.icon name="hero-magnifying-glass-mini" class="text-gray-600" />
-        </div>
-        <input
-          type="search"
-          id="default-search"
-          class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="Event name, artist, host, venue etc"
-          required
-        />
-        <button
-          type="submit"
-          class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
-          Search
-        </button>
-      </div>
-    </form>
-  </div>
-</div>
-
-<div class="mt-4 gap-2 max-w-screen-2xl px-4 mx-auto grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-6">
-  <div :for={event <- 1..1} class="bg-white rounded-2xl p-2 flex" id={"#{event}"}>
-    <div class="relative overflow-hidden rounded-xl w-24 aspect-[4/5] shrink-0">
-      <img src="https://placekitten.com/500/500" class="w-full h-full object-cover" />
-      <div class="absolute top-2 left-2 bg-white grid leading-4 py-2 px-3 rounded-lg ">
-        <span class="font-bold text-gray-800 tabular-nums">29</span>
-        <span class="text-xs text-gray-600">Mar</span>
-      </div>
-    </div>
-
-    <div class="p-2 flex flex-col justify-between space-y-2 w-full">
-      <h3 class="line-clamp-3 text-sm font-semibold">The Ultimate Cheese Festival</h3>
-      <div class="flex justify-between items-center">
-        <span class="text-gray-600 text-sm">Mea Culpa</span>
-        <span class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
-          R 300
-        </span>
-      </div>
-    </div>
-  </div>
+<div class="p-96">
+  <span class="text-[40rem] font-black italic">G</span>
 </div>
