--- a/lib/gits_web/controllers/event_html/show.html.heex
+++ b/lib/gits_web/controllers/event_html/show.html.heex
@@ -33,6 +33,22 @@
       </div>
     </div>
 
+    <div :if={@event.visibility != :private} class="flex gap-2 rounded-xl border p-6 shadow">
+      <.icon name="hero-link" class="text-zinc-500 shrink-0" />
+      <div class="grid gap-2">
+        <h2 class="font-medium">
+          Event preview
+        </h2>
+
+        <span class="text-gray-700">
+        </span>
+
+        <.link href={~p"/events/#{@event.masked_id}"} target="_blank">
+          <%= url(~p"/events/#{@event.masked_id}") %>
+        </.link>
+      </div>
+    </div>
+
     <div :if={@current_user.confirmed_at == nil} class="flex gap-2 rounded-xl border p-6 shadow">
       <.icon name="hero-exclamation-triangle" class="text-amber-500 shrink-0" />
       <div class="grid gap-2">
