--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,4 +1,4 @@
-<header :if={false} class="flex items-center gap-4 p-4 md:px-8">
+<header class="flex items-center gap-4 p-4 md:px-8">
   <div>
     <a href="/" class="font-poppins text-2xl font-black italic">GiTS</a>
   </div>
