some cosmetic changes

--- a/lib/gits_web/controllers/page_html/tickets.html.heex
+++ b/lib/gits_web/controllers/page_html/tickets.html.heex
@@ -1,5 +1,5 @@
 <%= if @customer == nil or @customer.scannable_instances == [] do %>
-  <div class="flex h-screen items-center">
+  <div class="flex items-center pt-36">
     <div class="flex grow flex-col justify-center gap-6">
       <div>
         <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
