--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<div class="flex min-h-screen items-center">
+<div class="flex items-center pt-36">
   <div class="flex grow flex-col justify-center gap-6">
     <h1 class="text-3xl font-black italic tracking-tight">GiTS</h1>
     <h2 class="text-xl font-medium tracking-tight text-gray-900">
