--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<div class="flex items-center pt-28">
+<div class="flex items-center pt-12 lg:pt-28">
   <div class="flex grow flex-col justify-center gap-6">
     <h2 class="text-xl font-medium tracking-tight text-gray-900">
       Easy events, affordable tickets.
