--- a/lib/gits_web/controllers/ticket_html/new.html.heex
+++ b/lib/gits_web/controllers/ticket_html/new.html.heex
@@ -16,6 +16,8 @@
   >
     <.input type="text" label="Name" field={f[:name]} />
     <.input type="number" label="Price" field={f[:price]} />
+    <.input type="number" label="Max per user" field={f[:allowed_quantity_per_user]} />
+    <.input type="number" label="Total quantity" field={f[:total_quantity]} />
 
     <div class="flex items-center gap-6">
       <.button>Create ticket</.button>
