--- a/lib/gits_web/live/scan_attendee_live.html.heex
+++ b/lib/gits_web/live/scan_attendee_live.html.heex
@@ -1,16 +1,20 @@
-<div id="uiscan" phx-hook="QrScannerInfo">
-  <div class="flex">
-    <div class="flex divide-x rounded-2xl border border-gray-300">
+<%= if is_nil(@camera_id) do %>
+  <div class="space-y-8 p-8">
+    <h2 class="text-lg font-semibold">Choose camera</h2>
+    <div id="uiscan" class="grid gap-4" phx-hook="QrScannerInfo">
       <button
         :for={camera <- @cameras}
-        phx-click={JS.push("change_camera", value: %{id: camera["id"]})}
-        class="p-4"
+        phx-click={
+          JS.patch(~p"/attendees/scanner/#{@account_id}/#{@event_id}?camera_id=#{camera["id"]}")
+        }
+        class="rounded-lg p-4 text-left hover:bg-gray-100"
       >
         <%= camera["label"] %>
       </button>
     </div>
   </div>
-  <div :if={@cameras != [] && @scan_results == nil} id="scanner" phx-hook="QrScanner">
+<% else %>
+  <div id="scanner" phx-hook="QrScanner" camera-id={@camera_id}>
     scanner
   </div>
-</div>
+<% end %>
