--- a/lib/gits_web/controllers/attendee_html/index.html.heex
+++ b/lib/gits_web/controllers/attendee_html/index.html.heex
@@ -21,11 +21,20 @@
     <div class="overflow-hidden rounded-2xl border">
       <div class="overflow-x-auto px-6 py-2 pt-4">
         <.table id="attendees" rows={@attendees}>
-          <:col :let={attendee} label="Name"><%= attendee.name %></:col>
+          <:col :let={attendee} label="Name"><%= attendee.user.display_name %></:col>
           <:col :let={attendee} label="Admitted at">
             <%= attendee.created_at
             |> Timex.to_datetime(:local)
             |> Timex.format!("%e %b %Y, %R %p", :strftime) %>
+          </:col>
+          <:col :let={attendee} label="Email verified">
+            <%= if is_nil(attendee.user.confirmed_at) do %>
+              no
+            <% else %>
+              at <%= attendee.user.confirmed_at
+              |> Timex.to_datetime(:local)
+              |> Timex.format!("%e %b %Y, %R %p", :strftime) %>
+            <% end %>
           </:col>
           <:action>
             <!-- <button> -->
