--- a/lib/gits_web/live/scan_attendee_live.html.heex
+++ b/lib/gits_web/live/scan_attendee_live.html.heex
@@ -11,6 +11,12 @@
       >
         <%= camera["label"] %>
       </button>
+      <.link
+        href={~p"/accounts/#{@account_id}/events/#{@event_id}/attendees"}
+        class="m-4 underline"
+      >
+        Go back
+      </.link>
     </div>
   </div>
 <% else %>
